# generals-bot

./: .gitignore  README.md  main.py  pyproject.toml
generals_bot/: __init__.py  __main__.py  client.py  global_listener.py  logger.py
generals_bot/base/: __init__.py  client.py  listener.py  namespace.py  plugin.py
generals_bot/commands/: __init__.py  generals.py  playback.py
generals_bot/constant/: endpoints.py  game.py  gui.py
generals_bot/game/: game_data.py  game_listener.py  types.py
generals_bot/game/gui/: __init__.py  gui.py
generals_bot/plugins/: __init__.py  global_listener.py  persistent.py  playback.py
generals_bot/plugins/data/: __init__.py  data_listener.py  dto.py  game_data.py  types.py
generals_bot/plugins/game/: __init__.py  game_data.py  game_listener.py  types.py
generals_bot/plugins/game/gui/: gui.py
generals_bot/plugins/gui/: gui.py  plugin.py  silent_pygame.py
generals_bot/plugins/player/: __init__.py  plugin.py
generals_bot/socketio/: __init__.py  client.py
generals_bot/utils/: __init__.py  async_utils.py  timeit.py  url.py
src/generals_bot/: __main__.py  client.py
src/generals_bot/base/: client.py  namespace.py  plugin.py
src/generals_bot/commands/: generals.py  playback.py
src/generals_bot/constant/: endpoints.py
src/generals_bot/plugins/: __init__.py  generals.py  global_listener.py  persistent.py  playback.py
src/generals_bot/plugins/data/: __init__.py  data_listener.py  game_data.py
src/generals_bot/plugins/gui/: __init__.py  gui.py  plugin.py  silent_pygame.py
src/generals_bot/plugins/player/: plugin.py
src/generals_bot/socketio/: __init__.py  client.py
src/generals_bot/types/: endpoints.py  map.py
src/generals_bot/utils/: async_utils.py  timeit.py  url.py
