[project]
name = "generals-bot"
version = "0.0.1"
authors = [
    { name = "Branden Xia", email = "xxtbranden@outlook.com" }
]
dependencies = [
    "requests",
    "python-socketio[asyncio_client]",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = ["black"]
gui = ["pygame"]

[project.scripts]
generals-bot = "generals_bot.__main__:main"

[tool.black]
line-length = 88
target-version = ["py312"]
