[project]
name = "generals-bot"
version = "0.0.1"
authors = [
    { name = "Branden Xia", email = "xxtbranden@outlook.com" }
]
dependencies = [
    "python-socketio[asyncio_client]",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = ["black", "mypy"]
gui = ["pygame"]

[project.scripts]
generals-bot = "generals_bot.__main__:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
