[project]
name = "generals-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BrandenXia", email = "xxtbranden@outlook.com" }
]
dependencies = [
    "python-socketio[asyncio_client]>=5.11.2",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
gui = ["pygame>=2.5.2"]

[project.scripts]
generals-bot = "generals_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "mypy @ git+https://github.com/python/mypy.git",
]

[tool.rye.scripts]
format = "black src"
typecheck = "mypy src --enable-incomplete-feature=NewGenericSyntax"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/generals_bot"]
